--- a/selffilter.conf
+++ b/selffilter.conf
@@ -5,3 +5,5 @@
 ^https:\/\/m5\.amap\.com\/ws\/feature\/preheat.* url reject
 ^https:\/\/m5-zb\.amap\.com.* url reject
 ^https:\/\/nisshh\d\.10010\.com.* url reject
+
+hostname = optimus-ads.amap.com, free-store.is.autonavi.com,oss.amap.com,m5.amap.com,m5-zb.amap.com
