--- a/selffilter.conf
+++ b/selffilter.conf
@@ -5,5 +5,6 @@
 ^https:\/\/m5\.amap\.com\/ws\/feature\/preheat.* url reject
 ^https:\/\/m5-zb\.amap\.com.* url reject
 ^https:\/\/nisshh\d\.10010\.com.* url reject
+^https:\/\/sns\.amap\.com\/ws\/msgbox.* url reject
 
-hostname = optimus-ads.amap.com, free-store.is.autonavi.com,oss.amap.com,m5.amap.com,m5-zb.amap.com
+hostname = sns.amap.com, optimus-ads.amap.com, free-store.is.autonavi.com,oss.amap.com,m5.amap.com,m5-zb.amap.com
