--- a/selffilter.conf
+++ b/selffilter.conf
@@ -6,5 +6,6 @@
 ^https:\/\/m5-zb\.amap\.com.* url reject
 ^https:\/\/nisshh\d\.10010\.com.* url reject
 ^https:\/\/sns\.amap\.com\/ws\/msgbox.* url reject
+^https:\/\/m5\.amap\.com\/ws\/shield\/scene.* url reject
 
 hostname = sns.amap.com, optimus-ads.amap.com, free-store.is.autonavi.com,oss.amap.com,m5.amap.com,m5-zb.amap.com
